[gd_scene load_steps=16 format=3 uid="uid://b6plyukisxj0j"]

[ext_resource type="TileSet" uid="uid://dj1l5fgk0wftn" path="res://assets/tilesets/test_action_tileset.tres" id="1_ggjqx"]
[ext_resource type="Script" path="res://modules/rooms/test_area_room_2/test_area_room_2.gd" id="1_n8v4d"]
[ext_resource type="PackedScene" uid="uid://c61di70f3r436" path="res://modules/exit_area/exit_area.tscn" id="2_ee688"]
[ext_resource type="PackedScene" uid="uid://dcpfgoqoaghou" path="res://modules/invisible_wall/invisible_wall.tscn" id="3_u016a"]
[ext_resource type="PackedScene" uid="uid://fy55thn23ao5" path="res://modules/player_spawn_point/player_spawn_point.tscn" id="4_cl3j1"]
[ext_resource type="PackedScene" uid="uid://c8ua2uil50vnq" path="res://modules/enemy_spawner/enemy_spawner.tscn" id="6_i1t4u"]
[ext_resource type="PackedScene" uid="uid://d07t8fkd5nupg" path="res://modules/combat_manager/combat_manager.tscn" id="7_0bpwl"]
[ext_resource type="PackedScene" uid="uid://d18di0xuv174k" path="res://modules/characters/enemies/ranger/ranger.tscn" id="8_vwsee"]
[ext_resource type="PackedScene" uid="uid://dafj2ld6w3ikc" path="res://modules/characters/enemies/fast_enemy/fast_enemy.tscn" id="9_gsnbc"]
[ext_resource type="PackedScene" uid="uid://drlx3u2mngfq0" path="res://modules/player_spawner/player_spawner.tscn" id="10_won1o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmqox"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gmng"]
size = Vector2(16, 32)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_8ea7i"]
vertices = PackedVector2Array(112, 192, -176, 192, -176, 64, -144, 64, 112, 144, -144, 0, -64, 0, -64, -80, 64, -80, 256, 0, 160, 112, 64, -112, 320, -112, 320, 0, 256, 112, 160, 144)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(3, 5, 6, 4), PackedInt32Array(4, 6, 7, 8, 9, 10), PackedInt32Array(8, 11, 12, 13, 9), PackedInt32Array(9, 14, 10), PackedInt32Array(4, 10, 15)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-176, 192, -176, 64, -144, 64, -144, 0, -64, 0, -64, -80, 64, -80, 64, -112, 320, -112, 320, 0, 256, 0, 256, 112, 160, 112, 160, 144, 112, 144, 112, 192)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js1wo"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52ctl"]
size = Vector2(32, 16)

[node name="TestAreaRoom2" type="Node2D"]
script = ExtResource("1_n8v4d")

[node name="Map" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_ggjqx")
format = 2
layer_0/name = "Floor"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(196613, 0, 5, 131077, 131072, 5, 65541, 131072, 6, 5, 131072, 6, -65531, 0, 4, -131067, 0, 4, -196603, 65536, 6, -262139, 65536, 6, -327675, 0, 5, 196612, 131072, 4, 131076, 0, 4, 65540, 65536, 5, 4, 131072, 4, -65532, 0, 4, -131068, 131072, 4, -196604, 65536, 6, -262140, 131072, 5, -327676, 131072, 6, 196611, 131072, 6, 131075, 0, 6, 65539, 65536, 4, 3, 131072, 5, -65533, 0, 6, -131069, 65536, 6, -196605, 65536, 4, -262141, 65536, 4, -327677, 131072, 4, 196610, 65536, 4, 131074, 131072, 6, 65538, 0, 6, 2, 0, 6, -65534, 0, 6, -131070, 131072, 4, -196606, 0, 4, -262142, 131072, 4, -327678, 131072, 4, 196609, 0, 5, 131073, 131072, 4, 65537, 0, 4, 1, 131072, 6, -65535, 131072, 6, -131071, 131072, 6, -196607, 131072, 4, -262143, 65536, 5, -327679, 0, 4, 196608, 0, 4, 131072, 65536, 6, 65536, 0, 4, 0, 65536, 6, -65536, 131072, 5, -131072, 131072, 6, -196608, 65536, 5, -262144, 131072, 5, -327680, 131072, 4, 262143, 65536, 6, 196607, 0, 4, 131071, 65536, 4, 65535, 0, 6, -1, 0, 4, -65537, 131072, 4, -131073, 131072, 5, -196609, 0, 4, -262145, 65536, 4, 262142, 131072, 4, 196606, 131072, 6, 131070, 0, 6, 65534, 0, 6, -2, 131072, 6, -65538, 0, 6, -131074, 65536, 4, -196610, 131072, 4, -262146, 0, 4, 262141, 131072, 5, 196605, 0, 6, 131069, 131072, 6, 65533, 0, 5, -3, 131072, 4, -65539, 131072, 5, -131075, 65536, 5, -196611, 0, 4, -262147, 0, 5, 262140, 131072, 4, 196604, 131072, 4, 131068, 131072, 6, 65532, 65536, 5, -4, 65536, 4, -65540, 65536, 4, -131076, 0, 4, -196612, 0, 6, -262148, 65536, 6, 393231, 131072, 5, 327695, 65536, 6, 262159, 131072, 6, 196623, 131072, 4, 131087, 0, 5, 65551, 65536, 5, 15, 65536, 4, -65521, 65536, 5, -131057, 131072, 5, 393230, 65536, 4, 327694, 65536, 6, 262158, 0, 4, 196622, 131072, 5, 131086, 131072, 6, 65550, 0, 4, 14, 131072, 5, -65522, 131072, 4, -131058, 0, 6, 393229, 0, 5, 327693, 65536, 4, 262157, 0, 4, 196621, 131072, 5, 131085, 0, 4, 65549, 131072, 4, 13, 131072, 6, -65523, 65536, 5, -131059, 65536, 5, 393228, 131072, 6, 327692, 65536, 4, 262156, 131072, 6, 196620, 131072, 4, 131084, 131072, 6, 65548, 65536, 6, 12, 0, 4, -65524, 65536, 5, -131060, 0, 5, 393227, 131072, 5, 327691, 0, 6, 262155, 131072, 5, 196619, 65536, 4, 131083, 0, 4, 65547, 0, 4, 11, 0, 5, -65525, 0, 6, -131061, 0, 5, 393226, 65536, 4, 327690, 65536, 4, 262154, 65536, 4, 196618, 65536, 5, 131082, 0, 5, 65546, 65536, 5, 10, 65536, 4, -65526, 0, 6, -131062, 131072, 5, 393225, 131072, 5, 327689, 0, 6, 262153, 131072, 6, 196617, 65536, 6, 131081, 0, 6, 65545, 131072, 4, 9, 0, 5, -65527, 0, 4, -131063, 131072, 4, 393224, 0, 6, 327688, 65536, 5, 262152, 0, 5, 196616, 131072, 5, 131080, 0, 6, 65544, 0, 5, 8, 0, 5, -65528, 0, 4, -131064, 65536, 6, 393223, 0, 5, 327687, 65536, 4, 262151, 0, 4, 196615, 131072, 5, 131079, 65536, 4, 65543, 131072, 4, 7, 65536, 6, -65529, 0, 6, -131065, 131072, 4, 393222, 0, 5, 327686, 65536, 6, 262150, 0, 6, 196614, 131072, 4, 131078, 131072, 6, 65542, 65536, 4, 6, 131072, 6, -65530, 65536, 6, -131066, 0, 6, 393221, 131072, 4, 327685, 65536, 4, 262149, 0, 6, 393220, 131072, 4, 327684, 65536, 4, 262148, 131072, 6, 393219, 131072, 4, 327683, 0, 4, 262147, 131072, 6, 720902, 131072, 5, 655366, 131072, 4, 589830, 0, 4, 524294, 0, 5, 458758, 0, 4, 720901, 131072, 6, 655365, 0, 6, 589829, 0, 6, 524293, 65536, 5, 458757, 131072, 6, 720900, 0, 6, 655364, 0, 5, 589828, 65536, 4, 524292, 131072, 6, 458756, 65536, 4, 720899, 131072, 5, 655363, 131072, 4, 589827, 131072, 5, 524291, 65536, 6, 458755, 65536, 4, 720898, 0, 4, 655362, 0, 5, 589826, 131072, 5, 524290, 131072, 4, 458754, 0, 5, 393218, 65536, 6, 327682, 0, 5, 262146, 0, 4, 720897, 131072, 5, 655361, 131072, 4, 589825, 0, 4, 524289, 65536, 6, 458753, 65536, 6, 393217, 65536, 5, 327681, 131072, 4, 262145, 131072, 5, 720896, 131072, 4, 655360, 131072, 6, 589824, 0, 5, 524288, 0, 4, 458752, 131072, 6, 393216, 131072, 4, 327680, 65536, 6, 262144, 0, 5, 786431, 131072, 4, 720895, 131072, 6, 589823, 131072, 4, 524287, 131072, 6, 458751, 131072, 5, 393215, 131072, 4, 327679, 0, 6, 786430, 65536, 6, 720894, 0, 6, 655358, 131072, 4, 589822, 65536, 4, 524286, 65536, 6, 458750, 65536, 5, 393214, 65536, 6, 327678, 0, 5, 786429, 65536, 5, 720893, 0, 4, 655357, 131072, 6, 589821, 0, 6, 524285, 131072, 6, 458749, 131072, 5, 393213, 65536, 6, 327677, 131072, 4, 786428, 65536, 5, 720892, 0, 4, 655356, 131072, 4, 589820, 131072, 4, 524284, 65536, 6, 458748, 0, 4, 393212, 0, 4, 327676, 65536, 4, 786427, 0, 5, 720891, 65536, 6, 655355, 0, 5, 589819, 65536, 4, 524283, 65536, 5, 458747, 65536, 4, 393211, 65536, 4, 327675, 131072, 6, 786426, 131072, 5, 720890, 0, 4, 655354, 0, 4, 589818, 131072, 6, 524282, 65536, 4, 458746, 131072, 4, 393210, 0, 4, 327674, 65536, 5, 786425, 65536, 5, 720889, 0, 5, 655353, 131072, 6, 589817, 65536, 4, 524281, 65536, 4, 458745, 0, 4, 393209, 0, 6, 327673, 0, 4, 786424, 131072, 4, 720888, 131072, 6, 655352, 0, 5, 589816, 131072, 5, 524280, 0, 6, 458744, 131072, 6, 393208, 0, 6, 327672, 131072, 6, 786423, 0, 4, 720887, 65536, 5, 655351, 65536, 4, 589815, 131072, 4, 524279, 0, 6, 458743, 65536, 5, 393207, 0, 4, 327671, 131072, 6, 786422, 131072, 4, 720886, 65536, 5, 655350, 131072, 5, 589814, 131072, 5, 524278, 131072, 5, 458742, 0, 6, 393206, 65536, 6, 327670, 65536, 4, 786421, 131072, 4, 720885, 0, 6, 655349, 65536, 6, 589813, 131072, 4, 524277, 0, 6, 458741, 131072, 6, 393205, 65536, 4, 327669, 0, 5, 524297, 65536, 6, 458761, 131072, 4, 524296, 131072, 6, 458760, 0, 6, 524295, 0, 5, 458759, 65536, 5, 262139, 131072, 6, 196603, 65536, 4, 131067, 0, 5, 65531, 131072, 5, 262138, 131072, 6, 196602, 0, 6, 131066, 131072, 5, 65530, 131072, 6, 262137, 65536, 4, 196601, 0, 6, 131065, 0, 4, 65529, 0, 5, 262136, 131072, 4, 196600, 65536, 5, 131064, 131072, 5, 65528, 0, 4, 262135, 0, 6, 196599, 131072, 5, 131063, 65536, 4, 65527, 131072, 5, -65517, 0, 6, -131053, 131072, 4, -196589, 65536, 4, -262125, 0, 4, -327661, 65536, 6, -393197, 131072, 5, -458733, 0, 6, -65518, 131072, 5, -131054, 0, 5, -196590, 131072, 5, -262126, 65536, 5, -327662, 0, 5, -393198, 0, 6, -458734, 65536, 4, -65519, 0, 5, -131055, 65536, 5, -196591, 131072, 5, -262127, 0, 4, -327663, 65536, 4, -393199, 65536, 4, -458735, 65536, 5, -65520, 131072, 4, -131056, 65536, 4, -196592, 65536, 6, -262128, 65536, 5, -327664, 0, 5, -393200, 65536, 4, -458736, 65536, 6, -196593, 65536, 4, -262129, 131072, 4, -327665, 65536, 6, -393201, 65536, 5, -458737, 65536, 5, -196594, 131072, 6, -262130, 131072, 5, -327666, 0, 5, -393202, 65536, 4, -458738, 131072, 6, -196595, 65536, 6, -262131, 65536, 4, -327667, 131072, 6, -393203, 0, 6, -458739, 0, 4, -196596, 131072, 6, -262132, 0, 4, -327668, 0, 5, -393204, 131072, 5, -458740, 0, 4, -196597, 65536, 5, -262133, 65536, 4, -327669, 0, 5, -393205, 0, 5, -458741, 0, 4, -196598, 65536, 4, -262134, 131072, 4, -327670, 131072, 4, -393206, 131072, 5, -458742, 131072, 5, -196599, 0, 5, -262135, 65536, 5, -327671, 131072, 6, -393207, 0, 6, -458743, 65536, 5, -196600, 0, 6, -262136, 131072, 6, -327672, 131072, 6, -393208, 65536, 4, -458744, 0, 4, -196601, 65536, 6, -262137, 0, 6, -327673, 65536, 6, -393209, 0, 5, -458745, 131072, 6, -196602, 0, 6, -262138, 0, 4, -327674, 65536, 6, -393210, 131072, 4, -458746, 0, 6, -393211, 65536, 4, -458747, 0, 5, -393212, 131072, 6, -458748, 131072, 5, 655359, 65536, 4, 851965, 131072, 5, 917501, 131072, 4, 917502, 65536, 6, 851966, 131072, 6, -327660, 0, 5, -262124, 131072, 6, -262123, 0, 6, -327659, 131072, 6, -524280, 131072, 6, -524279, 65536, 4, -589815, 131072, 5, -655351, 65536, 5, -655352, 131072, 6, -589816, 0, 4)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(262134, 65536, 0, 262133, 65536, 0, -9, 65536, 0, -10, 0, 1, -65546, 0, 1, -131082, 0, 1, -196618, 0, 0, -8, 65536, 0, -7, 65536, 0, -6, 65536, 0, -5, 65536, 0, -262149, 0, 1, -327685, 0, 1, -393221, 0, 1, -458757, 0, 1, -327684, 65536, 0, -327683, 65536, 0, -327682, 65536, 0, -327681, 65536, 0, -393216, 65536, 0, -393215, 65536, 0, -393214, 65536, 0, -393213, 65536, 0, -524293, 0, 0, -524284, 65536, 0, -524283, 65536, 0, -524282, 65536, 0, -524281, 65536, 0, -524278, 65536, 0, -524277, 65536, 0, -524276, 65536, 0, -524275, 65536, 0, -524274, 65536, 0, -524273, 65536, 0, -524272, 65536, 0, -524271, 65536, 0, -524270, 65536, 0, -524269, 65536, 0, -655357, 0, 1, -720893, 0, 0, -720876, 131072, 0, -655340, 131072, 1, -589804, 131072, 1, -524268, 131072, 1, -458732, 131072, 1, -393196, 131072, 1, -196588, 131072, 1, -131052, 131072, 1, -65516, 131072, 2, -65517, 0, 3, -65518, 0, 3, -65519, 0, 3, -65520, 0, 3, 16, 131072, 1, 65552, 131072, 1, 131088, 131072, 1, 196624, 131072, 1, 262160, 131072, 1, 327696, 131072, 1, 393232, 131072, 2, 393231, 0, 3, 393230, 0, 3, 393229, 0, 3, 393228, 0, 3, 393227, 0, 3, 393226, 0, 3, 458762, 131072, 1, 524298, 131072, 2, 524297, 0, 3, 524296, 0, 3, 524295, 0, 3, 589831, 131072, 1, 655367, 131072, 1, 720903, 131072, 2, 720902, 0, 3, 720901, 0, 3, 720900, 0, 3, 720899, 0, 3, 720898, 0, 3, 720897, 0, 3, 720896, 0, 3, 786431, 0, 3, 786428, 0, 3, 786427, 0, 3, 786426, 0, 3, 786425, 0, 3, 786424, 0, 3, 786423, 0, 3, 786422, 0, 3, 786421, 0, 3, 786420, 0, 2, 720884, 0, 1, 655348, 0, 1, 589812, 0, 1, 524276, 0, 1, 458740, 0, 1, 393204, 0, 1, 327668, 0, 1, 262132, 0, 1, 196596, 0, 1, 131060, 0, 1, 65524, 0, 0, 851964, 0, 1, 917500, 0, 2, 917501, 0, 3, 917502, 0, 3, 851967, 131072, 1, 917503, 131072, 2, -393195, 0, 3, -393194, 131072, 0, -327658, 131072, 1, -262122, 131072, 2, -262123, 0, 3, -262124, 0, 3, -720888, 0, 3, -720887, 0, 3)
layer_2/name = "Collision"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(851956, 131072, 3, 851957, 131072, 3, 851958, 131072, 3, 851959, 131072, 3, 851960, 131072, 3, 851961, 131072, 3, 851962, 131072, 3, 851963, 131072, 3, 851964, 131072, 3, 851965, 131072, 3, 851966, 131072, 3, 851967, 131072, 3, 786432, 131072, 3, 786433, 131072, 3, 786434, 131072, 3, 786435, 131072, 3, 786436, 131072, 3, 786437, 131072, 3, 786438, 131072, 3, 786439, 131072, 3)

[node name="ExitArea" parent="Map" instance=ExtResource("2_ee688")]
position = Vector2(144, -136)
target_spawn = "from_top"
use_room_manager = true

[node name="Collision" parent="Map/ExitArea" index="0"]
shape = SubResource("RectangleShape2D_nmqox")

[node name="ExitArea2" parent="Map" instance=ExtResource("2_ee688")]
position = Vector2(344, -64)
target_spawn = "from_right"
use_room_manager = true

[node name="Collision" parent="Map/ExitArea2" index="0"]
shape = SubResource("RectangleShape2D_1gmng")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Map"]
navigation_polygon = SubResource("NavigationPolygon_8ea7i")

[node name="InvisibleWall" parent="Map" groups=["removable_walls"] instance=ExtResource("3_u016a")]
position = Vector2(328, -64)

[node name="Collision" parent="Map/InvisibleWall" index="0"]
shape = SubResource("RectangleShape2D_js1wo")

[node name="InvisibleWall2" parent="Map" groups=["removable_walls"] instance=ExtResource("3_u016a")]
position = Vector2(144, -120)

[node name="Collision" parent="Map/InvisibleWall2" index="0"]
shape = SubResource("RectangleShape2D_52ctl")

[node name="EnemySpawnPoints" type="Node2D" parent="Map"]

[node name="EnemySpawnPoint" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(-96, 80)

[node name="EnemySpawnPoint2" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(31, 80)

[node name="EnemySpawnPoint3" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(144, 40)

[node name="EnemySpawnPoint4" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(144, -56)

[node name="EnemySpawnPoint5" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(0, -40)

[node name="PlayerSpawnPoints" type="Node2D" parent="Map"]

[node name="PlayerSpawnPoint" parent="Map/PlayerSpawnPoints" instance=ExtResource("4_cl3j1")]
position = Vector2(-32, 184)
spawn_id = "from_top"

[node name="PlayerSpawnPoint2" parent="Map/PlayerSpawnPoints" instance=ExtResource("4_cl3j1")]
position = Vector2(144, -104)
spawn_id = "from_bottom"

[node name="PlayerSpawnPoint3" parent="Map/PlayerSpawnPoints" instance=ExtResource("4_cl3j1")]
position = Vector2(312, -64)
spawn_id = "from_left"

[node name="CombatManager" parent="." node_paths=PackedStringArray("enemy_spawner", "map") instance=ExtResource("7_0bpwl")]
enemy_types = Array[PackedScene]([ExtResource("8_vwsee"), ExtResource("9_gsnbc")])
enemy_spawner = NodePath("../EnemySpawner")
map = NodePath("../Map")

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("map", "spawn_points_container") instance=ExtResource("6_i1t4u")]
map = NodePath("../Map")
spawn_points_container = NodePath("../Map/EnemySpawnPoints")

[node name="PlayerSpawner" parent="." node_paths=PackedStringArray("spawn_points_container", "map") instance=ExtResource("10_won1o")]
spawn_points_container = NodePath("../Map/PlayerSpawnPoints")
map = NodePath("../Map")

[editable path="Map/ExitArea"]
[editable path="Map/ExitArea2"]
[editable path="Map/InvisibleWall"]
[editable path="Map/InvisibleWall2"]
